# air-monitor

./: Cargo.toml  README.md
src/: button.rs  buzzer.rs  display.rs  lib.rs  rgb_led.rs  unit.rs
src/scd30/: data.rs  firmware_version.rs  mod.rs
testsuite/: Cargo.toml
testsuite/src/: lib.rs
testsuite/tests/: test.rs
