[package]
authors = ["Peter Stuart <peter@peterstuart.org>"]
name = "air_monitor"
edition = "2021"
version = "0.1.0"

[workspace]
members = ["testsuite"]

[dependencies]
arrayvec = {version = "0.5.2", default-features = false }
cortex-m = "0.7.3"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "0.6.0-rc.4"
crc_all = "0.2.0"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
dwt-systick-monotonic = "0.1.0-rc.2"
embedded-graphics = "0.6.2"
embedded-hal = "0.2.6"
epd-waveshare = "0.4.0"
nb = "1.0.0"
nrf52840-hal = "0.14.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
