[package]
authors = ["Peter Stuart <peter@peterstuart.org>"]
name = "air_monitor"
edition = "2021"
version = "0.1.0"

[workspace]
members = ["testsuite"]

[dependencies]
arrayvec = {version = "0.7.2", default-features = false }
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.0.0"
crc_all = "0.2.0"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
dwt-systick-monotonic = "1.0.0"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
epd-waveshare = "0.5.0"
nb = "1.0.0"
nrf52840-hal = "0.14.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
profont = "0.5.0"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
